@@ -114,6 +114,7 @@ PHP                                                                        NEWS
 
 - PDO_SQLITE:
   . throw on null bytes / resolve GH-13952 (divinity76).
+  . Implement GH-17321: Add setAuthorizer to Pdo\Sqlite. (nielsdos)
 
 - PGSQL:
   . Added pg_close_stmt to close a prepared statement while allowing
